# ClipboardForCosmic

./: .gitignore  Cargo.toml  README.md
src/: bin_management.rs  clipboard_watcher.rs  main.rs
