[package]
name = "jax-clipboard-history"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A clipboard history application for the COSMIC desktop"

[dependencies]
dirs = "6"
fs2 = "0.4"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
ksni = { version = "0.3.6", features = ["blocking"] }
libc = "0.2"
libcosmic = { git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = ["tokio", "wayland", "wgpu"] }
tokio = { version = "1", features = ["io-util", "net", "rt", "sync"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
